# django-content-subscriptions

./: .travis.yml  LICENSE  README.md  pytest.ini  requirements_dev.txt  setup.cfg  travis.yml
content_subscriptions/: apps.py  registry.py  utils.py
content_subscriptions/managers/: __init__.py  subscribable_manager.py  subscription_manager.py
content_subscriptions/migrations/: 0001_initial.py
content_subscriptions/models/: hidden_content.py  subscribable.py  subscription_holder_addon.py
content_subscriptions/tests/: __init__.py  conftest.py  models.py  settings.py  test_models.py  test_registry.py  test_utils.py
subscriptions/: exceptions.py  registry.py  utils.py
subscriptions/managers/: subscribable_manager.py
subscriptions/migrations/: 0001_initial.py
subscriptions/models/: __init__.py  subscription.py
subscriptions/tests/: conftest.py  models.py  settings.py  test_managers.py  test_models.py  test_registry.py  test_utils.py
